tests/tooling/fixtures/native/execution/positive/basic_i32_return_main.objc3
// Positive execution fixture: basic i32-return main path.
module BasicI32ReturnMain;

fn main() -> i32 {
  return 17;
}
